# loop-guard

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: test-status.yml
src/: lib.rs
