[package]
name = "loop-guard"
version = "0.1.2"
edition = "2021"
license = "MIT"
documentation= "https://github.com/nbry/loop-guard"
homepage = "https://github.com/nbry/loop-guard"
repository = "https://github.com/nbry/loop-guard"
description = """
A dev dependency for preventing infinte loops.
"""
